[tool.poetry]
name = "claude-coder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "claude_coder"}]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.3"
anthropic = "^0.3.6"
openai = "^0.27.8"
langchain = "^0.0.247"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
