[tool.poetry]
name = "claude-coder"
version = "0.1.0"
description = ""
authors = [
    "Maggie Mao <guanqunm@gmail.com>",
    "Jason Wu <zhwu2019@gmail.com>",
    "Thomas Wang <hi@xgwang.me>",
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
serve = "run:main"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.3"
anthropic = "^0.3.6"
openai = "^0.27.8"
langchain = "^0.0.247"
python-dotenv = "^1.0.0"
hupper = "^1.12"
tiktoken = "^0.4.0"
click = "^8.1.6"
docker = "^6.1.3"
gradio = "^3.39.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
